package units;

/**
 * Defines the three unit types per faction.
 * Used for factory creation and unit identification.
 */
public enum UnitType {
    // Fire
    INFERNO_WARRIOR,
    FLAME_ARCHER,
    PHOENIX,

    // Water
    TIDE_GUARDIAN,
    FROST_MAGE,
    WAVE_RIDER,

    // Earth
    STONE_GOLEM,
    TERRA_SHAMAN,
    EARTHQUAKE_TITAN,

    // Air
    WIND_DANCER,
    STORM_CALLER,
    SKY_GUARDIAN
}