@startuml Factory Method Pattern - ElementarClash

!define ABSTRACT_CLASS abstract class

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
    BackgroundColor<<Abstract>> LightYellow
    BorderColor<<Abstract>> DarkOrange
    BackgroundColor<<Concrete>> LightBlue
    BorderColor<<Concrete>> DarkBlue
}

enum Faction {
    FIRE
    WATER
    EARTH
    AIR
}

' ===== Creator (Abstract Factory) =====
ABSTRACT_CLASS UnitFactory <<Abstract>> {
    - faction: Faction
    - unitCounter: int
    __
    # UnitFactory(faction: Faction)
    __
    + {final} createUnit(type: UnitType): Unit
    # {abstract} createUnitInternal(id: String, type: UnitType): Unit
    # {abstract} isValidTypeForFaction(type: UnitType): boolean
    - generateUnitId(type: UnitType): String
    + getFaction(): Faction
}

' ===== Product (Abstract Product) =====
ABSTRACT_CLASS Unit <<Abstract>> {
    - id: String
    - name: String
    - faction: Faction
    - type: UnitType
    - baseStats: UnitStats
    - currentHealth: int
    - position: Position
    - acted: boolean
    __
    # Unit(id, name, faction, type, stats)
    __
    + isAlive(): boolean
    + takeDamage(damage: int): void
    + heal(amount: int): void
    + resetTurn(): void
    + markAsActed(): void
    + {abstract} getSpecialAbility(): String
    + getTerrainAttackBonus(): int
    + getTerrainDefenseBonus(): int
}

' ===== Enum =====
enum UnitType {
    INFERNO_WARRIOR
    FLAME_ARCHER
    PHOENIX
    TIDE_GUARDIAN
    FROST_MAGE
    WAVE_RIDER
    STONE_GOLEM
    TERRA_SHAMAN
    EARTHQUAKE_TITAN
    WIND_DANCER
    STORM_CALLER
    SKY_GUARDIAN
}

class UnitStats {
    + maxHealth: int
    + attack: int
    + defense: int
    + movement: int
    + range: int
}

' ===== Concrete Factory (exemplarisch: Feuer) =====
class FireUnitFactory <<Concrete>> {
    + FireUnitFactory()
    __
    # createUnitInternal(id: String, type: UnitType): Unit
    # isValidTypeForFaction(type: UnitType): boolean
}

' ===== Concrete Unit (exemplarisch: Feuer) =====
class InfernoWarrior <<Concrete>> {
    - {static} LAVA_ATTACK_BONUS: int = 2
    __
    ~ InfernoWarrior(id: String, stats: UnitStats)
    + getSpecialAbility(): String
    + getTerrainAttackBonus(): int
}

' ===== Inheritance Relationships =====
UnitFactory <|-- FireUnitFactory
Unit <|-- InfernoWarrior

' ===== Dependencies =====
UnitFactory ..> Unit : <<creates>>
FireUnitFactory ..> InfernoWarrior : <<creates>>

UnitFactory ..> UnitType : <<uses>>
UnitFactory o-- Faction
Unit o-- UnitStats
Unit ..> Faction : <<uses>>
Unit ..> UnitType : <<uses>>

@enduml
